--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    {% for data in datas %}
-        <div class="col-md-3">
+    <div class="m-8">
+        <h1 class="text-3xl text-center m-8">
+            hijacked by baktash and ahmadreza :)
+        </h1>
+        {% for data in datas %}
+        <div class="text-xl rounded-lg bg-gray-300 p-3">
             {% load get_item_filter %}
             {% for key in data.data %}
-                {{key}} : {{data.data|get_item:key}}
-                <br>
-                -------------------------------
-                <br>
-            <br>
+                <p class="my-1">
+                    {{key}} : {{data.data|get_item:key}}
+                </p>
             {% endfor %}
+            <hr>
         </div>
     {% endfor %}
+    </div>
 </body>
 </html>
