--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -11,14 +11,13 @@
             hijacked by baktash and ahmadreza :)
         </h1>
         {% for data in datas %}
-        <div class="text-xl rounded-lg bg-gray-300 p-3">
+        <div class="text-xl rounded-lg bg-gray-300 p-3 my-3">
             {% load get_item_filter %}
             {% for key in data.data %}
                 <p class="my-1">
-                    {{key}} : {{data.data|get_item:key}}
+                    <b>{{key}} </b>: {{data.data|get_item:key}}
                 </p>
             {% endfor %}
-            <hr>
         </div>
     {% endfor %}
     </div>
